# wordlistctl

./: .gitignore  Dockerfile  README.md  pyproject.toml  repo.json  wordlistctl.py
bash-completion/: wordlistctl
man/: wordlistctl.1
