[project]
name = "wordlistctl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sveto", email = "me@svetovoyvv.ru" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
wordlistctl = "wordlistctl:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
