[project]
name = "wordlistctl"
version = "0.9.3"
description = "Fetch, install and search wordlist archives from websites."
readme = "README.md"
authors = []
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.5",
    "termcolor>=3.2.0",
]

[project.scripts]
wordlistctl = "wordlistctl:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
